isaac: initial builds for api demos

--- a/api_demos/beer_mapping.html
+++ b/api_demos/beer_mapping.html
@@ -19,7 +19,8 @@
             <h1>Beer Mapping API</h1>
 
             <div class="panel">
-                <h2>Demo</h2>
+                <h2>Notes</h2>
+                <p>Works well, but doesn't show many breweries.</p>
             </div>
             
             <div class="panel">
