--- a/api_demos/brewerydb.html
+++ b/api_demos/brewerydb.html
@@ -19,7 +19,8 @@
             <h1>BreweryDB API</h1>
 
             <div class="panel">
-                <h2>Demo</h2>
+                <h2>Notes</h2>
+                <p>Had issues calling AJAX (we need to read about CORS).</p>
             </div>
             
             <div class="panel">
