isaac: initial builds for api demos

--- a/api_demos/beer_mapping.html
+++ b/api_demos/beer_mapping.html
@@ -20,7 +20,7 @@
 
             <div class="panel">
                 <h2>Notes</h2>
-                <p>Works well, but doesn't show many breweries.</p>
+                <p>Works well, but didn't show many breweries.</p>
             </div>
             
             <div class="panel">
