--- a/api_demos/zomato.html
+++ b/api_demos/zomato.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Trail API demo">
+        <meta name="description" content="Zomato API demo">
         <meta name="author" content="Isaac J. Lee">
 
-        <title>Trail API Demo</title>
+        <title>Zomato API Demo</title>
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
@@ -16,19 +16,19 @@
     </head>
     <body>
         <div class="container">
-            <h1>Trail API</h1>
+            <h1>Zomato API</h1>
 
             <div class="panel">
                 <h2>Notes</h2>
-                <p>AJAX call is a bit complex. Found 31 hiking trails.</p>
+                <p>AJAX call is a bit complex. Shows 20 places at a time (100 maximum).</p>
             </div>
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://market.mashape.com/trailapi/trailapi">Link to the API documentation</a>
+                <p><a href="https://developers.zomato.com/documentation">Link to the API documentation</a>
             </div>
         </div>
 
-        <script type="text/javascript" src="assets/javascript/trail_api.js"></script>
+        <script type="text/javascript" src="assets/javascript/zomato.js"></script>
     </body>
 </html>
