isaac: initial builds for api demos

--- a/api_demos/brewerydb.html
+++ b/api_demos/brewerydb.html
@@ -20,7 +20,8 @@
 
             <div class="panel">
                 <h2>Notes</h2>
-                <p>Had issues calling AJAX (we need to read about CORS).</p>
+                <p>Open the Console to view results.</p>
+                <p>Failed on AJAX Call. May need to read about CORS.</p>
             </div>
             
             <div class="panel">
