--- a/api_demos/zomato.html
+++ b/api_demos/zomato.html
@@ -20,6 +20,7 @@
 
             <div class="panel">
                 <h2>Notes</h2>
+                <p>Open the Console to view results.</p>
                 <p>AJAX call is a bit complex. Shows 20 places at a time (100 maximum).</p>
             </div>
             
