--- a/api_demos/beer_mapping.html
+++ b/api_demos/beer_mapping.html
@@ -20,6 +20,7 @@
 
             <div class="panel">
                 <h2>Notes</h2>
+                <p>Open the Console to view results.</p>
                 <p>Works well, but didn't show many breweries.</p>
             </div>
             
