--- a/api_demos/trail_api.html
+++ b/api_demos/trail_api.html
@@ -20,6 +20,7 @@
 
             <div class="panel">
                 <h2>Notes</h2>
+                <p>Open the Console to view results.</p>
                 <p>AJAX call is a bit complex. Found 31 hiking trails.</p>
             </div>
             
