--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="jumbotron">
-        <h1 class="display-3">LocALL</h1>
-        <p>Eat, Play, and Drink Locally</p>
+        <h1 class="local-head">LocALL</h1>
+        <h2>Eat, Play, and Drink Locally</h2>
         <a class="btn btn-primary btn-lg" href="#" role="button">About Us</a>
     </div>
 
@@ -123,8 +123,6 @@
         </div>
     </div>
 </div>
-
-
 
 </body>
 <script src = "assets/js/local.js"></script>
