--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </div>
     </div>
     <div id = "aboutU">
+        <div class="row">
         <h1></h1>
         <p></p>
         <ul>
@@ -80,6 +81,7 @@
             <li></li>
             <li></li>
         </ul>
+        </div>
     </div>
     <div class="row">
         <h1 class="text-center"><a href="#myModal" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Contact Us</a></h1>
