isaac: api js updated

--- a/api_demos/google_maps.html
+++ b/api_demos/google_maps.html
@@ -11,7 +11,7 @@
           /* IMPORTANT: Always set the map height explicitly to define the size
            * of the div element that contains the map. */
           #map {
-            height: 400px;
+            height: 500px;
           }
           /* Optional: Makes the sample page fill the window. */
           html, body {
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXkXE4GQC50D5MTJSZRnoy47XBou0f1U&callback=initMap" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXkXE4GQC50D5MTJSZRnoy47XBou0f1U&callback=displayMap" async defer></script>
         <script type="text/javascript" src="assets/javascript/google_maps.js"></script>
     </body>
 </html>
