--- a/api_demos/zomato.html
+++ b/api_demos/zomato.html
@@ -26,7 +26,7 @@
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://developers.zomato.com/documentation">Link to the API documentation</a>
+                <p><a href="https://developers.zomato.com/documentation">Link to the API documentation</a></p>
             </div>
         </div>
 
