--- a/api_demos/beer_mapping.html
+++ b/api_demos/beer_mapping.html
@@ -26,7 +26,7 @@
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://beermapping.com/api/reference/">Link to the API documentation</a>
+                <p><a href="https://beermapping.com/api/reference/">Link to the API documentation</a></p>
             </div>
         </div>
 
