--- a/api_demos/mapbox.html
+++ b/api_demos/mapbox.html
@@ -38,7 +38,7 @@
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://www.mapbox.com/api-documentation/#maps">Link to the API documentation</a>
+                <p><a href="https://www.mapbox.com/api-documentation/#maps">Link to the API documentation</a></p>
             </div>
         </div>
     </body>
