--- a/api_demos/trail_api.html
+++ b/api_demos/trail_api.html
@@ -26,7 +26,7 @@
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://market.mashape.com/trailapi/trailapi">Link to the API documentation</a>
+                <p><a href="https://market.mashape.com/trailapi/trailapi">Link to the API documentation</a></p>
             </div>
         </div>
 
