--- a/api_demos/yelp.html
+++ b/api_demos/yelp.html
@@ -26,7 +26,7 @@
             
             <div class="panel">
                 <h2>Documentation</h2>
-                <p><a href="https://www.yelp.com/developers/documentation/v3/get_started">Link to the API documentation</a>
+                <p><a href="https://www.yelp.com/developers/documentation/v3/get_started">Link to the API documentation</a></p>
             </div>
         </div>
 
