--- a/api_demos/index.html
+++ b/api_demos/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     </head>
     <body>
         <div class="container">
