Isaac: Page for creating databases -- stable build

--- a/api_demos/index.html
+++ b/api_demos/index.html
@@ -4,23 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="create brewery, trail, and bbq databases">
-        <meta name="author" content="Isaac J. Lee">
+        <meta name="author" content="Isaac Lee, Jacque White">
 
-        <title>Creating Databases</title>
+        <title>Place searches</title>
         <style>
-          /* IMPORTANT: Always set the map height explicitly to define the size
-           * of the div element that contains the map. */
-          #map {
-            height: 500px;
-          }
-          /* Optional: Makes the sample page fill the window. */
-          /*
-          html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-          }
-          */
+            /* IMPORTANT: Always set the map height explicitly to define the size
+             * of the div element that contains the map. */
+            #map {
+                height: 500px;
+            }
         </style>
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -35,27 +27,65 @@
             <h1>Creating Databases</h1>
 
             <div class="panel">
-                <h2>Restaurants, Trails, Breweries</h2>
-                <p>Directions: Open the Console to see each database.</p>
-            </div>
-
-            <div class="panel">
                 <h2>Google Maps</h2>
                 <div id="map"></div>
             </div>
-            
-            <div class="panel">
-                <h2>Documentations</h2>
-                <ul>
-                    <li><a href="https://beermapping.com/api/reference/">Beer Mapping API</a></li>
-                    <li><a href="https://developers.google.com/maps/documentation/javascript/tutorial">Google Maps API</a></li>
-                    <li><a href="https://market.mashape.com/trailapi/trailapi">Trail API</a></li>
-                    <li><a href="https://developers.zomato.com/documentation">Zomato API</a></li>
-                </ul>
+
+            <div class="panel" id="restaurants">
+                <h2>BBQ</h2>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Location</th>
+                            <th>Phone</th>
+                            <th>Website</th>
+                            <th>Image</th>
+                            <th>Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
-        </div>
-        <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXkXE4GQC50D5MTJSZRnoy47XBou0f1U&callback=displayMap" async defer></script>
+
+            <div class="panel" id="trails">
+                <h2>Trails</h2>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Location</th>
+                            <th>Phone</th>
+                            <th>Website</th>
+                            <th>Image</th>
+                            <th>Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+
+            <div class="panel" id="breweries">
+                <h2>Breweries</h2>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Location</th>
+                            <th>Phone</th>
+                            <th>Website</th>
+                            <th>Image</th>
+                            <th>Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
         <script type="text/javascript" src="assets/javascript/create_databases.js"></script>
     </body>
 </html>
