Isaac: Page for creating databases -- stable build

--- a/api_demos/index.html
+++ b/api_demos/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="create brewery, trail, and bbq databases">
         <meta name="author" content="Isaac Lee, Jacque White">
 
-        <title>Place searches</title>
+        <title>Creating Databases</title>
         <style>
             /* IMPORTANT: Always set the map height explicitly to define the size
              * of the div element that contains the map. */
