--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         <div class="jumbotron">
             <h1 class="local-head heading">LocALL</h1>
             <h2>Eat, Play, and Drink Locally</h2>
-
             <a class="btn btn-primary btn-lg" onClick="displayPage(2)" href="#" role="button">Go Local!</a><br>
             <a class="btn btn-primary btn-lg" onClick="displayPage(3)" href="#" role="button">About Us</a>
         </div>
@@ -108,70 +107,66 @@
             </div>
         </div>    
           
-        <div id="team" class="flexContainer"> 
-            <div class="flex-item"> 
-             <!--   <div class="team-content1"> -->
-                    <h2 class="person">Jaqueline</h2> 
-                    <h3 class="position">
-                        <a href="#"target="_blank">Junior Software Developer</a>
-                    </h3> 
-                    <p class="bio-des">lorem ipsum</strong></p> 
-                 <!--  </div> -->
-
-              <!--  <div class="teamline-img"> 
-                <div class="sprite software">
-                </div> 
-                </div>-->
-                    <span class="date">May17 - Present</span> 
-            </div> 
-
-            <div class="flex-item2"> 
-               <!-- <div class="team-content2"> -->
-                    <h2 class="person">Isaac</h2> 
-                    <h3 class="position">
-                        <a href="#" target="_blank">Junior Software Developer</a>
-                    </h3> 
-                    <p class="bio-des">loreum ipsum</p> 
-               <!-- </div> 
-                <div class="teamline-img"> 
-                    <div class="sprite computer">
-                    </div> 
-                </div> -->
-                    <span class="date">May17 - Present</span> 
-            </div> 
-
-            <div class="flex-item3"> 
-                  <!--  <div class="team-content3 "> -->
-                    <h2 class="person">Aaron</h2> 
-                    <h3 class="position">
-                        <a href="#" target="_blank">Junior Software Developer</a>
-                    </h3> 
-                    <p class="bio-des">lorem ipsum</p> 
-              <!--  </div> 
-                <div class="teamline-img"> 
-                    <div class="sprite industry">
-                    </div> 
-                </div> -->
-                <span class="date">May17 - Present</span> 
-            </div> 
-
-            <div class="flex-item4"> 
-               <!-- <div class="team-content4"> -->
-                    <h2 class="person">Margarita Tagaban</h2>
-                    <h3 class="position">
-                        <a href="#" target="_blank">Junior Software Developer</a>
-                    </h3> 
-                    <p class="bio-des">Lorem ipsum</p> 
-              <!--  </div> 
-                <div class="teamline-img"> 
-                    <div class="sprite development">    
-                    </div> 
-                </div> -->
-                <span class="date">May17 - Present</span> 
-            </div> 
-        </div> 
-    </div>
-
-    <script src = "assets/js/local.js"></script>
+        <div id="carouselExampleSlidesOnly" class="carousel slide aboutUs" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-block w-100"  alt="First slide">
+                        <h1>Jaqueline White</h1>
+                        <h2>Software Developer</h2>
+                        <img src="" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100"  alt="Second slide">
+                        <h1>Isaac</h1>
+                        <h2>Software Developer</h2>
+                        <img src="" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100"  alt="First slide">
+                        <h1>Aaron Tyler</h1>
+                        <h2>Software Developer</h2>
+                        <img src="" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100"  alt="First slide">
+                        <h1>Margarita Tagaban</h1>
+                        <h2>Software Developer</h2>
+                        <img src="" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
+<script src = "assets/js/local.js"></script>
 </html>
