refactored make_recommendations.html code

--- a/api_demos/create_databases_alternate.html
+++ b/api_demos/create_databases_alternate.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="create brewery, trail, and bbq databases">
-        <meta name="author" content="Isaac J. Lee">
+        <meta name="author" content="Isaac J. Lee, Jacque White">
 
-        <title>Creating Databases</title>
+        <title>Create Databases</title>
         <style>
           /* IMPORTANT: Always set the map height explicitly to define the size
            * of the div element that contains the map. */
@@ -32,7 +32,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Creating Databases</h1>
+            <h1>Create Databases</h1>
 
             <div class="panel">
                 <h2>Restaurants, Trails, Breweries</h2>
