--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-block w-100"  alt="Second slide">
-                        <h1>Isaac</h1>
+                        <h1>Isaac Lee</h1>
                         <h2>Software Developer</h2>
                         <img src="" alt="">
                         <p>
