--- a/api_demos/google_maps.html
+++ b/api_demos/google_maps.html
@@ -38,6 +38,6 @@
         </div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUXkXE4GQC50D5MTJSZRnoy47XBou0f1U&callback=displayMap" async defer></script>
-        <script type="text/javascript" src="assets/javascript/google_maps.js"></script>
+        <script type="text/javascript" src="assets/js/google_maps.js"></script>
     </body>
 </html>
