--- a/create_databases.html
+++ b/create_databases.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style_apis.css">
         <style>
             /* IMPORTANT: Always set the map height explicitly to define the size
              * of the div element that contains the map. */
@@ -50,7 +50,7 @@
             </div>
 
             <div class="panel" id="hike">
-                <h2>Trails</h2>
+                <h2>Hike</h2>
 
                 <table>
                     <thead>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="panel" id="brewery">
-                <h2>Breweries</h2>
+                <h2>Brewery</h2>
 
                 <table>
                     <thead>
