--- a/api_demos/beer_mapping.html
+++ b/api_demos/beer_mapping.html
@@ -30,6 +30,6 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="assets/javascript/beer_mapping.js"></script>
+        <script type="text/javascript" src="assets/js/beer_mapping.js"></script>
     </body>
 </html>
