--- a/api_demos/trail_api.html
+++ b/api_demos/trail_api.html
@@ -30,6 +30,6 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="assets/javascript/trail_api.js"></script>
+        <script type="text/javascript" src="assets/js/trail_api.js"></script>
     </body>
 </html>
