--- a/api_demos/zomato.html
+++ b/api_demos/zomato.html
@@ -30,6 +30,6 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="assets/javascript/zomato.js"></script>
+        <script type="text/javascript" src="assets/js/zomato.js"></script>
     </body>
 </html>
