--- a/make_recommendations.html
+++ b/make_recommendations.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style_api.css">
         <style>
             /* This div allows Google Maps to always appear on the screen */
             .page {
@@ -63,6 +63,7 @@
         </style>
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     </head>
     <body>
         <div class="container">
@@ -92,6 +93,6 @@
         </div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
-        <script type="text/javascript" src="assets/javascript/make_recommendations.js"></script>
+        <script type="text/javascript" src="assets/js/make_recommendations.js"></script>
     </body>
 </html>
