--- a/api_demos/make_recommendations.html
+++ b/api_demos/make_recommendations.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="recommend places based on distance">
-        <meta name="author" content="Isaac J. Lee">
+        <meta name="author" content="Isaac J. Lee, Jacque White">
 
         <title>Make Recommendations</title>
 
