--- a/create_databases.html
+++ b/create_databases.html
@@ -11,13 +11,6 @@
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/style_api.css">
-        <style>
-            /* IMPORTANT: Always set the map height explicitly to define the size
-             * of the div element that contains the map. */
-            #map {
-                height: 500px;
-            }
-        </style>
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
@@ -25,65 +18,10 @@
     <body>
         <div class="container">
             <h1>Create Databases</h1>
+            <p>Open Firebase to see the results.</p>
 
-            <div class="panel">
-                <h2>Google Maps</h2>
-                <div id="map"></div>
-            </div>
-
-            <div class="panel" id="bbq">
-                <h2>BBQ</h2>
-
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Location</th>
-                            <th>Phone</th>
-                            <th>Website</th>
-                            <th>Image</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
-
-            <div class="panel" id="hike">
-                <h2>Hike</h2>
-
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Location</th>
-                            <th>Phone</th>
-                            <th>Website</th>
-                            <th>Image</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
-
-            <div class="panel" id="brewery">
-                <h2>Brewery</h2>
-
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Location</th>
-                            <th>Phone</th>
-                            <th>Website</th>
-                            <th>Image</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
+            <div id="map" style="display: none"></div>
+        </div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=createDatabases" async defer></script>
         <script type="text/javascript" src="assets/js/create_databases.js"></script>
