--- a/api_demos/create_databases.html
+++ b/api_demos/create_databases.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="panel" id="hike">
-                <h2>Trails</h2>
+                <h2>Hike</h2>
 
                 <table>
                     <thead>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="panel" id="brewery">
-                <h2>Breweries</h2>
+                <h2>Brewery/h2>
 
                 <table>
                     <thead>
