--- a/api_demos/create_databases.html
+++ b/api_demos/create_databases.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="panel" id="brewery">
-                <h2>Brewery/h2>
+                <h2>Brewery</h2>
 
                 <table>
                     <thead>
