--- a/api_demos/create_databases.html
+++ b/api_demos/create_databases.html
@@ -83,6 +83,7 @@
                     <tbody></tbody>
                 </table>
             </div>
+        </div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=createDatabases" async defer></script>
         <script type="text/javascript" src="assets/js/create_databases.js"></script>
