--- a/api_demos/authenticate_users.html
+++ b/api_demos/authenticate_users.html
@@ -73,6 +73,8 @@
                     <input type="text" id="userPassword">
                 </div>
 
+                <div id="messageToUser"></div>
+
                 <div class="button_bottom" id="button_submit">Submit</div>
             </div>
         </div>
