added new information
adding a modal and mine and Jaqueline's bio's/pic

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="text-muted">
                         <button type="button" class="btn btn-outline-primary" onClick="displayPage(1)">Home</button>
                         <button type="button" class="btn btn-outline-secondary" onClick="displayPage(3)">About</button>
-                        <button type="button" class="btn btn-outline-success" onClick="displayPage(4)">Contact</button>
+                        <button type="button" class="btn btn-outline-success" onClick="displayPage(2)">Go</button>
                         <div class="container page" id="page4"> 
                             <hr class="prettyline">
                             <center>
@@ -252,21 +252,22 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="d-block w-100"  alt="First slide">
-                        <h1>Jaqueline White</h1>
+                        <img src="assets/images/jacque.jpg" alt="Jaque">
+                        <h1 id="us">Jaqueline White</h1>
                         <h2>Software Developer</h2>
-                        <img src="" alt="">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            BIO:
+                            <br> 
+                            Hi I'm Jaqueline!
+                            <br>
+                            I'm an Austinite that has a passion for all things health 
+                            and wellness, culinary arts, and travel.
                         </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="d-block w-100"  alt="Second slide">
-                        <h1>Isaac Lee</h1>
+                        <h1 id="us">Isaac Lee</h1>
                         <h2>Software Developer</h2>
                         <img src="" alt="">
                         <p>
@@ -280,7 +281,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-block w-100"  alt="First slide">
-                        <h1>Aaron Tyler</h1>
+                        <h1 id="us">Aaron Tyler</h1>
                         <h2>Software Developer</h2>
                         <img src="" alt="">
                         <p>
@@ -294,15 +295,17 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-block w-100"  alt="First slide">
-                        <h1>Margarita Tagaban</h1>
+                            <img src="assets/images/margie.jpg" alt="margie">
+                        <h1 id="us">Margarita Tagaban</h1>
                         <h2>Software Developer</h2>
-                        <img src="" alt="">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                           BIO:
+                           <br>
+                           Hi I'm Margie!
+                           <br>
+                           I'm a Texas native who loves problem solving. I earned my Bachelor's Degree July 2017. 
+                           <br>
+                           My hobbies include reading, kayaking, hiking, gaming, and traveling.  
                         </p>
                     </div>
                 </div>
